update the new video play mechanism

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 700.userprefs
 Assembly-CSharp-vs.csproj
 Assembly-CSharp.csproj
+html5/700html/js/frame_LOCAL_8144.js
+html5/700html/js/frame_REMOTE_8144.js
+html5/700html/page/main_new.html.orig
